--- a/index.html
+++ b/index.html
@@ -6,10 +6,274 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- googl-font -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Poppins:ital,wght@0,300;1,400;1,500&family=Spline+Sans:wght@600&display=swap"
+        rel="stylesheet">
+    <!-- font-awasome -->
+    <script src="https://kit.fontawesome.com/d64052140c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Banglades</h1>
+    <!-- header-section-start ---- 
+    ------------------------------>
+    <header>
+        <nav class="navigation-manu">
+            <div>
+                <h3>Influencer products</h3>
+            </div>
+            <div class="nav-option">
+                <a href="">Home</a>
+                <a href="">products</a>
+                <a href="">Sign up</a>
+                <a href="">Log in</a>
+                <span><i class="fas fa-search"></i></span>
+                <span><i class="fas fa-shopping-cart"></i></span>
+            </div>
+        </nav>
+    </header>
+    <!-- header-section-end ------- 
+    ------------------------------>
+
+    <!-- Main-section-start ------- 
+    ------------------------------>
+    <section class="main-section">
+        <div class="influancer-info">
+            <h1>Becoming a Social Media Influencer</h1>
+            <p>If you hunt around this website, you will find an ever-increasing number of articles related to
+                Influencer Marketing. This includes our take on What is Influencer Marketing: A Beginners Guide.</p>
+            <br>
+            <a class="order-button" href=""> Check-Out now <i class="fas fa-hand-point-right"></i></a>
+        </div>
+        <div class="influancer-picture">
+            <img src="images/profile/fb-influancer.jpg" alt="">
+        </div>
+    </section>
+    <!-- Main-section-end ------- 
+    ------------------------------>
+
+    <!-- Product-list-section-start -------- 
+    --------------------------------------->
+    <section class="product-hedding">
+        <h1>Popular Collection</h1>
+        <div class="product-container">
+            <div class="product-list">
+                <div class="product-image"><img src="images/camera.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Bloging camera
+                    </h2>
+                    <h2>$2000.70</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <span>5.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/mic.png" alt=""></div>
+                <div>
+                    <h2>
+                        Recording Condenser
+                    </h2>
+                    <h2>$140.00</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>4.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/tripod.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Universal Tripod
+                    </h2>
+                    <h2>$30.90</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <span>5.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/lights.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Conference Lighting
+                    </h2>
+                    <h2>$200.50</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>4.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/single-light.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        SH Softbox
+                    </h2>
+                    <h2>$300.60</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <span>5.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/drone.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Drone Quadcopter
+                    </h2>
+                    <h2>$3200.90</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>4.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/setup.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Tabletop Lighting
+                    </h2>
+                    <h2>$700.30</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <span>5.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/action.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        Action camera
+                    </h2>
+                    <h2>$600.90</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star empty"></i>
+                        <span>4.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="product-list">
+                <div class="product-image"><img src="images/airpod.png" alt=""></div>
+                <div class="product-info">
+                    <h2>
+                        wireless headphone
+                    </h2>
+                    <h2>$40.00</h2>
+                    <div class="star-icon">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <span>5.00</span>
+                        <p>Get it as soon as <br> available <br> Protection Wordwide shifting!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Product-list-section-end -------- 
+    ------------------------------------->
+
+    <!-- link-arrow-section-start ------
+    ---------------------------------->
+
+    <div class="link-arrow"><a href=""> See More <i class="fas fa-hand-point-right"></i></a></div>
+
+    <!-- link-arrow-section-end ------
+    ---------------------------------->
+
+    <!-- social-media-user-section-start --
+    -------------------------------------->
+    <section class="social-media">
+        <div class="social-image">
+            <img src="images/social-media.jpg" alt="">
+        </div>
+        <div class="social-info">
+            <h1>Sell more by featuring products in online store</h1>
+            <p>
+                As an online shopper you might take “featured products” as a given when visiting your favorite
+                e-commerce websites. As an online store owner, understanding and utilizing featured products on your own
+                site is essential to success.</p>
+            <a class="order-button" href=""> Order Now <i class="fas fa-hand-point-right"></i></a>
+        </div>
+    </section>
+    <!-- social-media-user-section-end --
+    -------------------------------------->
+
+    <!-- Footer-section-start -------------
+    -------------------------------------->
+    <footer class="footer-element">
+        <div class="footer-main">
+            <div>
+                <h2>Influencer products</h2>
+                <p>Copyright &copy; 2020 influencer products <br> <small> rights reserved</small></p>
+
+            </div>
+            <div class="footer-icon">
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-linkedin"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer-section-end ---------------
+    -------------------------------------->
 </body>
+
 
 </html>
